# TauriOmniTool

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: api.rs  mod.rs
src/components/common/: AiChat.vue  AiDialogs.vue  AiOptions.vue  Fileselect.vue  Shortcut.vue
src/components/modules/av_ops/: Subtitle.vue
src/components/modules/file_ops/: Rename.vue
src/hooks/: useAiChat.js  useLog.js
src/router/: index.js
src/stores/: capability.js  options.js  shortcut.js
src/utils/: function.js  sqlite.js
src/views/: Capabilities.vue  Home.vue  Options.vue  Use.vue
